# waypoint

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_assets.sql  0003_credentials.sql  0004_observations.sql  0005_findings_notes.sql  0006_templates.sql  0007_cross_cutting.sql  0008_sessions.sql  0009_seed_observation_types.sql  0010_seed_attack_path_rules.sql  0011_seed_templates.sql  0012_mitre_and_audit.sql  0013_timeline.sql  0014_service_rework.sql  0015_host_login_notes.sql  0016_service_checklists_expansion.sql  0017_checklist_item_assessment.sql  0018_remove_observations.sql  0019_host_foothold.sql  0020_node_positions.sql  0021_mysql_checklist.sql  0022_host_pivot.sql  0023_trust_timeline.sql  0024_service_origin.sql  0025_service_credential_timeline.sql  0026_findings_retest_and_horizon.sql  0027_report_type_and_severity_defs.sql  0028_report_snapshots.sql  0029_pivot_tunnels.sql  0030_expand_service_catalog.sql  0031_service_technologies.sql
backend/src/: audit.rs  authz.rs  crypto.rs  http_error.rs  lib.rs  main.rs  state.rs  subject_types.rs
backend/src/auth/: middleware.rs  mod.rs  password.rs  rate_limit.rs  routes.rs  session.rs
backend/src/graph/: mod.rs
backend/src/import/: bloodhound.rs  mod.rs  nessus.rs  nmap.rs  openvas.rs
backend/src/report/: mod.rs
backend/src/routes/: attachments.rs  audit.rs  checklists.rs  clients.rs  common.rs  credential_usage.rs  credentials.rs  dashboard.rs  engagements.rs  findings.rs  (+19 more)
(+72 files in other folders)
